fixing the operationId on all api docs
